Version 1.0.26:
- Fix a compiler warning with current OpenSSL versions.

Version 1.0.25:
- Fix DIGEST-MD5 authentication, accidentally broken in 1.0.23.
- Deprecate DIGEST-MD5 authentication as per RFC 6331.

Version 1.0.24:
- Remove unmaintained translations (es, pt_BR).
- Simplify manual license: use a simple permissive license instead of GNU FDL.
- Replace a call to gnutls_protocol_set_priority(), which is deprecated in
  GnuTLS >= 2.12.0. Fixes Debian bug #624048.
- Remove gnulib, for simplicity and maintainability.
- Update GNU autotools files, in particular configure.ac.

Version 1.0.23:
- Fix authentication with SCRAM-SHA-1 via libgsasl. Reported and analyzed by
  Steffen Lehmann.

Version 1.0.22:
- Add a new received_header command and --received-header option, to disable
  the Received header if required.
- Update gnulib to 2010-12-23.
- Add a new passwordeval command and --passwordeval option, to set the password
  from the output of a command. Written by Martin Stenberg for msmtp.

Version 1.0.21:
- Update gnulib to 2010-07-03.
- Report platform in --version output.
- Fix building with newer OpenSSL versions. Reported and tested by Peter Baur
  for msmtp.
- Fixed building without TLS/SSL support. Reported by Tan Ker Vin for msmtp.

Version 1.0.20:
- Update gnulib to 2010-03-20.
- Support authentication mechanism SCRAM-SHA-1 via GNU SASL.
- New command tls_fingerprint to trust one particular TLS certificate.
- Change whitespace: Avoid tabs and whitespace at end of lines.
- Fix Mac OS X Keychain support to use POP3 instead of SMTP passwords.
- Update the documentation of keyring usage.
- Add the mpop-gnome-tool.py script to manage Gnome Keyring passwords for
  mpop. Thanks to Gaizka Villate and Emmanuel Bouthenot.
- Fix single quotes in man page.
- Add pt_BR translation, provided by Rudá Moura. Thanks!

Version 1.0.19:
- Properly handle NUL characters in the Common Name or Subject Alternative